--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,3 +1,20 @@
+*,
+::after,
+::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
+html {
+  box-sizing: border-box;
+  font-size: 62.5%;
+}
+
+body {
+  font-family: "Manrope", sans-serif;
+}
+
 .attribution {
   font-size: 11px;
   text-align: center;
