--- a/src/style/App.css
+++ b/src/style/App.css
@@ -13,6 +13,39 @@ html {
 
 body {
   font-family: "Manrope", sans-serif;
+  background-color: #fafbff;
+}
+
+p {
+  color: #858fad;
+}
+
+.container {
+  max-width: 37.5rem;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.header {
+  height: 40rem;
+  padding: 9rem 2.4rem;
+  background: url("../images/pattern-circles.svg") no-repeat, #f1f5fe;
+  background-position: right 50% top 5.7rem;
+  border-radius: 0 0 0 19.15rem;
+}
+.header__headline {
+  color: #293356;
+  font-size: 2rem;
+  font-weight: 800;
+  line-height: 2.7rem;
+  margin-bottom: 0.8rem;
+}
+.header__text {
+  max-width: 18rem;
+  margin: 0 auto;
+  font-size: 1.3rem;
+  line-height: 2.3rem;
+  font-weight: 600;
 }
 
 .attribution {
