--- a/src/style/App.css
+++ b/src/style/App.css
@@ -48,6 +48,113 @@ p {
   font-weight: 600;
 }
 
+.component {
+  background-color: white;
+  max-width: 32.7rem;
+  padding-block: 3.2rem;
+  margin: 0 auto;
+  box-shadow: 0 2rem 3rem -0.5rem rgba(127, 137, 185, 0.152073);
+  border-radius: 0.8rem;
+  transform: translateY(-15rem);
+}
+.component__data--views {
+  font-weight: 800;
+  font-size: 1.2rem;
+  line-height: 1.6rem;
+  letter-spacing: 1.71429px;
+  margin-bottom: 2.4rem;
+}
+.component__data--slider {
+  margin-bottom: 2.4rem;
+}
+.component__data--price {
+  display: grid;
+  grid-template-columns: repeat(2, -webkit-max-content);
+  grid-template-columns: repeat(2, max-content);
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  font-weight: 600;
+  font-size: 1.4rem;
+  line-height: 1.9rem;
+  margin-bottom: 3.4rem;
+}
+.component__data--price span {
+  color: #293356;
+  font-weight: 800;
+  font-size: 3.2rem;
+  line-height: 4.4rem;
+  letter-spacing: -0.8px;
+}
+.component__billing {
+  display: grid;
+  grid-template-columns: repeat(4, -webkit-max-content);
+  grid-template-columns: repeat(4, max-content);
+  gap: 1rem;
+  justify-content: right;
+  padding-right: 2rem;
+  padding-bottom: 3.8rem;
+  margin-bottom: 2.4rem;
+  border-bottom: 1px solid #eaeefb;
+}
+.component__billing--monthly {
+  font-weight: 600;
+  font-size: 1.2rem;
+  line-height: 1.6rem;
+}
+.component__billing--yearly {
+  font-weight: 600;
+  font-size: 1.2rem;
+  line-height: 1.6rem;
+}
+.component__billing--discount {
+  display: grid;
+  align-items: center;
+  color: #ff8c66;
+  background-color: #feece7;
+  border-radius: 0.95rem;
+  width: 4.1rem;
+  height: 1.9rem;
+  font-weight: 800;
+  font-size: 1rem;
+  line-height: 1.4rem;
+}
+.component__cta--btn {
+  background-color: #293356;
+  color: #bdccff;
+  font-weight: 800;
+  font-size: 1.2rem;
+  line-height: 1.6rem;
+  width: 17rem;
+  height: 4.1rem;
+  border-radius: 2.05rem;
+  border: none;
+  cursor: pointer;
+  transition: all 0.2s;
+}
+.component__cta--btn:hover {
+  color: white;
+}
+.component__features {
+  margin-bottom: 3.2rem;
+}
+.component__features--feature {
+  display: grid;
+  grid-template-columns: repeat(2, -webkit-max-content);
+  grid-template-columns: repeat(2, max-content);
+  gap: 1.6rem;
+  align-items: center;
+  justify-content: center;
+}
+.component__features--feature:not(:last-child) {
+  margin-bottom: 1rem;
+}
+.component__features--feature-text {
+  font-weight: 600;
+  font-size: 1.2rem;
+  line-height: 1.6rem;
+}
+
 .attribution {
   font-size: 11px;
   text-align: center;
