--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -2,3 +2,5 @@
 @import "./scss/header";
 @import "./scss/component";
 @import "./scss/footer";
+@import "./scss/toggleSwitch";
+@import "./scss/slider";
