--- a/src/style/scss/_component.scss
+++ b/src/style/scss/_component.scss
@@ -6,18 +6,37 @@
   box-shadow: 0 2rem 3rem -0.5rem rgba(127, 137, 185, 0.152073);
   border-radius: 0.8rem;
   transform: translateY(-15rem);
+
+  @include respond(desktop) {
+    max-width: 54rem;
+  }
   &__data {
+    @include respond(desktop) {
+      display: grid;
+      justify-content: center;
+      align-items: center;
+      row-gap: 4rem;
+      grid-template-columns: repeat(2, max, content);
+    }
     &--views {
+      grid-row: 1 / 2;
       font-weight: 800;
       font-size: 1.2rem;
       line-height: 1.6rem;
       letter-spacing: 1.71429px;
       margin-bottom: 2.4rem;
+
+      @include respond(desktop) {
+        font-size: 1.4rem;
+        line-height: 1.9rem;
+        letter-spacing: 0.2rem;
+        margin: 0;
+      }
     }
-    &--slider {
-      margin-bottom: 2.4rem;
-    }
+
     &--price {
+      grid-row: 1 / 2;
+
       display: grid;
       grid-template-columns: repeat(2, max-content);
       align-items: center;
@@ -27,12 +46,24 @@
       font-size: 1.4rem;
       line-height: 1.9rem;
       margin-bottom: 3.4rem;
+
+      @include respond(desktop) {
+        font-size: 1.6rem;
+        line-height: 2.2rem;
+        margin: 0;
+      }
       & span {
         color: $color-text-cta-background;
         font-weight: 800;
         font-size: 3.2rem;
         line-height: 4.4rem;
         letter-spacing: -0.8px;
+
+        @include respond(desktop) {
+          font-size: 4rem;
+          line-height: 5.5rem;
+          letter-spacing: -1px;
+        }
       }
     }
   }
@@ -41,18 +72,24 @@
     grid-template-columns: repeat(4, max-content);
     gap: 1rem;
     justify-content: right;
+    align-items: center;
     padding-right: 2rem;
     padding-bottom: 3.8rem;
     margin-bottom: 2.4rem;
     border-bottom: 1px solid $color-empty-slider-bar;
+
+    @include respond(desktop) {
+      margin-bottom: 3.2rem;
+      padding-right: 6.5rem;
+      gap: 1.6rem;
+    }
 
     &--monthly {
       font-weight: 600;
       font-size: 1.2rem;
       line-height: 1.6rem;
     }
-    &--toggle {
-    }
+
     &--yearly {
       font-weight: 600;
       font-size: 1.2rem;
@@ -69,9 +106,20 @@
       font-weight: 800;
       font-size: 1rem;
       line-height: 1.4rem;
+
+      @include respond(desktop) {
+        width: 8rem;
+      }
     }
   }
   &__cta {
+    @include respond(desktop) {
+      display: grid;
+      grid-template-columns: repeat(2, max-content);
+      justify-content: center;
+      align-items: center;
+      column-gap: 13rem;
+    }
     &--btn {
       background-color: $color-text-cta-background;
       color: $color-cta-text;
@@ -82,7 +130,7 @@
       height: 4.1rem;
       border-radius: 2.05rem;
       border: none;
-      cursor: pointer;
+      cursor: url(../images/pointer.svg), auto;
       transition: all 0.2s;
 
       &:hover {
@@ -92,6 +140,9 @@
   }
   &__features {
     margin-bottom: 3.2rem;
+    @include respond(desktop) {
+      margin: 0;
+    }
     &--feature {
       display: grid;
       grid-template-columns: repeat(2, max-content);
