--- a/src/style/scss/_header.scss
+++ b/src/style/scss/_header.scss
@@ -10,6 +10,11 @@
     font-weight: 800;
     line-height: 2.7rem;
     margin-bottom: 0.8rem;
+
+    @include respond(desktop) {
+      font-size: 2.8rem;
+      line-height: 3.8rem;
+    }
   }
   &__text {
     max-width: 18rem;
@@ -17,5 +22,10 @@
     font-size: 1.3rem;
     line-height: 2.3rem;
     font-weight: 600;
+    @include respond(desktop) {
+      max-width: 100vw;
+      font-size: 1.5rem;
+      line-height: 2rem;
+    }
   }
 }
