--- a/src/style/scss/_component.scss
+++ b/src/style/scss/_component.scss
@@ -31,6 +31,7 @@
         line-height: 1.9rem;
         letter-spacing: 0.2rem;
         margin: 0;
+        justify-self: start;
       }
     }
 
@@ -51,6 +52,7 @@
         font-size: 1.6rem;
         line-height: 2.2rem;
         margin: 0;
+        justify-self: end;
       }
       & span {
         color: $color-text-cta-background;
