--- a/src/style/App.css
+++ b/src/style/App.css
@@ -24,6 +24,7 @@ p {
   margin: 0 auto;
   text-align: center;
 }
+
 .header {
   height: 40rem;
   padding: 9rem 2.4rem;
@@ -149,7 +150,8 @@ p {
 @media (min-width: 540px) {
   .component__billing {
     margin-bottom: 3.2rem;
-    padding-right: 6.5rem;
+    padding-right: 5.8rem;
+    padding-bottom: 4rem;
     gap: 1.6rem;
   }
 }
@@ -178,6 +180,7 @@ p {
 @media (min-width: 540px) {
   .component__billing--discount {
     width: 8rem;
+    transform: translateX(-7px);
   }
 }
 @media (min-width: 540px) {
@@ -225,6 +228,11 @@ p {
 }
 .component__features--feature:not(:last-child) {
   margin-bottom: 1rem;
+}
+@media (min-width: 540px) {
+  .component__features--feature {
+    justify-content: start;
+  }
 }
 .component__features--feature-text {
   font-weight: 600;
@@ -311,6 +319,7 @@ input:checked + .slider:before {
   .component__data--slider {
     width: 44.4rem;
     grid-column: 1/3;
+    margin-bottom: 5.6rem;
   }
 }
 .component__data--slider::-webkit-slider-thumb {
