--- a/src/style/scss/_component.scss
+++ b/src/style/scss/_component.scss
@@ -82,7 +82,8 @@
 
     @include respond(desktop) {
       margin-bottom: 3.2rem;
-      padding-right: 6.5rem;
+      padding-right: 5.8rem;
+      padding-bottom: 4rem;
       gap: 1.6rem;
     }
 
@@ -111,6 +112,7 @@
 
       @include respond(desktop) {
         width: 8rem;
+        transform: translateX(-7px);
       }
     }
   }
@@ -142,6 +144,7 @@
   }
   &__features {
     margin-bottom: 3.2rem;
+
     @include respond(desktop) {
       margin: 0;
     }
@@ -153,6 +156,10 @@
       justify-content: center;
       &:not(:last-child) {
         margin-bottom: 1rem;
+      }
+
+      @include respond(desktop) {
+        justify-content: start;
       }
 
       &-text {
