--- a/src/style/scss/_slider.scss
+++ b/src/style/scss/_slider.scss
@@ -8,6 +8,7 @@
   @include respond(desktop) {
     width: 44.4rem;
     grid-column: 1 / 3;
+    margin-bottom: 5.6rem;
   }
 
   &::-webkit-slider-thumb {
