--- a/src/style/App.css
+++ b/src/style/App.css
@@ -50,6 +50,7 @@ p {
   .header__headline {
     font-size: 2.8rem;
     line-height: 3.8rem;
+    margin-bottom: 1.2rem;
   }
 }
 .header__text {
@@ -79,7 +80,7 @@ p {
 @media (min-width: 540px) {
   .component {
     max-width: 54rem;
-    transform: translateY(-17rem);
+    transform: translateY(-18rem);
   }
 }
 @media (min-width: 540px) {
