--- a/src/style/scss/_header.scss
+++ b/src/style/scss/_header.scss
@@ -20,6 +20,7 @@
     @include respond(desktop) {
       font-size: 2.8rem;
       line-height: 3.8rem;
+      margin-bottom: 1.2rem;
     }
   }
   &__text {
