--- a/src/style/App.css
+++ b/src/style/App.css
@@ -23,6 +23,7 @@ p {
 .container {
   margin: 0 auto;
   text-align: center;
+  height: 100vh;
 }
 
 .header {
@@ -80,7 +81,9 @@ p {
 @media (min-width: 540px) {
   .component {
     max-width: 54rem;
+    height: 39.7rem;
     transform: translateY(-18rem);
+    padding: 4rem 4.8rem 3.2rem auto;
   }
 }
 @media (min-width: 540px) {
@@ -368,8 +371,4 @@ input:checked + .slider:before {
 .component__data--slider::-moz-range-thumb:active {
   cursor: url(../images/pointer-active.svg), auto;
   background-color: #24aea1;
-}
-
-.rangeLabel {
-  display: none;
 }/*# sourceMappingURL=App.css.map */
