--- a/src/style/scss/_component.scss
+++ b/src/style/scss/_component.scss
@@ -9,7 +9,9 @@
 
   @include respond(desktop) {
     max-width: 54rem;
+    height: 39.7rem;
     transform: translateY(-18rem);
+    padding: 4rem 4.8rem 3.2rem auto;
   }
   &__data {
     @include respond(desktop) {
